--- a/index.css
+++ b/index.css
@@ -8,9 +8,11 @@ html {
 
 body {
   height: 100%;
-  margin: 0;
+  margin: 0%;
+  padding: 0%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #202020;
+  overflow-x: hidden;
 }
 
 header {
@@ -23,14 +25,13 @@ header {
 
 .scores {
   display: flex;
-  width: 100%;
 }
 
 #player-score,
 #computer-score {
-  flex: 1;
+  flex: auto;
   text-align: center;
-  padding: 2rem 4rem;
+  padding: 2rem 0%;
   font-size: 3rem;
   font-weight: 700;
 }
@@ -44,17 +45,27 @@ header {
 
 .game-container {
   display: flex;
+  flex: 1;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  max-width: 200rem;
   padding: 4rem 6rem;
   background-color: #776f6f;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .choices {
   display: flex;
-  gap: 3rem;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+  gap: 2rem;
+  width: 100%;
+  max-width: 600px;
+  padding-top: 2%;
 }
 
 .choices button {
@@ -85,7 +96,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 10%;
+  padding-top: 2%;
 }
 
 #computer-choice {
@@ -211,23 +222,57 @@ header {
     transform: translateY(-50%) translateX(1.5rem);
   }
 }
+
 /* Media query for smaller screens */
 @media (max-width: 768px) {
   .arrow-left {
-    left: 20%;
+    left: 15%;
+    top: 30%;
   }
 
   .arrow-right {
-    right: 20%;
+    right: 15%;
+    top: 30%;
   }
 
   .arrow {
     font-size: 4rem;
   }
-
+  .container {
+    top: 5%;
+  }
   .restartBtn {
     width: 15rem;
     height: 8rem;
     font-size: 3rem;
+  }
+  .game-container {
+    flex-direction: row;
+    align-items: center;
+    padding: 2rem;
+  }
+
+  #moves-left {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  .choices button {
+    width: 10rem;
+    height: 10rem;
+    font-size: 6rem;
+  }
+  #computer-choice {
+    width: 10rem;
+    height: 10rem;
+    font-size: 6rem;
+  }
+  .choices {
+    padding-left: 0%;
+  }
+  .computer-choice-container {
+    justify-content: right;
+  }
+  .scores {
+    font-size: 20%;
   }
 }
